Fixed invisibility transitions
set backward button to have invisible class initially
now that absolute positioning the invisible class can use 'block' display and show the transitions again as opposed to 'none' where they would not work

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,7 @@ h1 {
     position: absolute;
     bottom: 100px;
     height: 10%;
-    width: 30%;
+    width: 25%;
 }
 
 #forward {
@@ -59,5 +59,5 @@ h1 {
 .invisible {
     transition: .2s;
     opacity: 0;
-    display: none;
+    display: block;
 }
